# TNT-Screen-Ruler

./: CMakeLists.txt  LICENSE  README.md  app_icon.rc  images.qrc  main.cpp  widget.cpp  widget.h
